# MagicSquare_06

./: .cursorrules  .gitignore  README.md  pyproject.toml
docs/: DESIGN_layered_architecture_tdd_magic_square_4x4.md  PRD_magic_square_4x4_tdd.md  Summary  test_case_specification_magic_square_4x4.md
prompt/: 01_problem_definition_report-prompt.md  02_dual_track_ui_logic_tdd_clean_architecture_report-prompt.md  03_user_entity_ecb_tdd_implementation_report-prompt.md  04_prd_journey_architecture_export_report-prompt.md  05_readme_project_export_report-prompt.md  06_dual_track_mlops_prd_update_report-prompt.md  07_test_case_specification_export_report-prompt.md  08_project_snapshot_export_report-prompt.md  09_magic_square_green_gui_implementation_report-prompt.md  10_refactoring_pre_analysis_report-prompt.md
report/: 01_problem_definition_report.md  02_dual_track_ui_logic_tdd_clean_architecture_report.md  03_user_entity_ecb_tdd_implementation_report.md  04_prd_journey_architecture_export_report.md  05_readme_project_export_report.md  06_dual_track_mlops_prd_update_report.md  07_test_case_specification_export_report.md  08_project_snapshot_export_report.md  09_magic_square_green_gui_implementation_report.md  10_refactoring_pre_analysis_report.md
src/.cursor/rules/: .cursorrules
src/magic_square/: __init__.py  __main__.py  constants.py
tests/: conftest.py
tests/boundary/: test_ui_red.py
tests/domain/: test_magic_square_blank_coords.py  test_magic_square_boundary_errors.py  test_magic_square_solution.py  test_magic_square_validation.py
tests/entity/: test_user.py
(+16 files in other folders)
